--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,8 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Palanquin:wght@100;200;300;400;500;600;700&display=swap");
- 
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+html, body{
+  font-family: 'Montserrat', sans-serif;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
